src/parser_ffi.rs

unsafe extern "C" {
    pub fn moenotes_result_string(result: moenotes_result_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn moenotes_operate_type_name(
        type_: moenotes_operate_type_t,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn moenotes_operate_type_is_judgement(type_: moenotes_operate_type_t) -> u8;
}
unsafe extern "C" {
    pub fn moenotes_score_parse(
        data: *const ::std::os::raw::c_void,
        size: usize,
        options: *const moenotes_parse_options_t,
        allocator: *const moenotes_allocator_t,
        out_score: *mut *mut moenotes_score_t,
        error_message: *mut ::std::os::raw::c_char,
        error_message_size: usize,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_free(score: *mut moenotes_score_t);
}
unsafe extern "C" {
    pub fn moenotes_score_note_count(score: *const moenotes_score_t) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_note_at(
        score: *const moenotes_score_t,
        index: usize,
        out_note: *mut moenotes_note_view_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_source_note_at(
        score: *const moenotes_score_t,
        index: usize,
        out_note: *mut moenotes_note_view_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_lane_count(score: *const moenotes_score_t) -> i32;
}
unsafe extern "C" {
    pub fn moenotes_score_warnings(score: *const moenotes_score_t) -> u32;
}
unsafe extern "C" {
    pub fn moenotes_score_bpm_count(score: *const moenotes_score_t) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_bpm_at(
        score: *const moenotes_score_t,
        index: usize,
        out_event: *mut moenotes_bpm_event_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_signature_count(score: *const moenotes_score_t) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_signature_at(
        score: *const moenotes_score_t,
        index: usize,
        out_event: *mut moenotes_signature_event_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_position_at_tick(
        score: *const moenotes_score_t,
        tick: i32,
        out_position: *mut moenotes_position_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_note_position_at_tick(
        score: *const moenotes_score_t,
        tick: i32,
        out_position: *mut moenotes_position_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_event_count(score: *const moenotes_score_t) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_event_at(
        score: *const moenotes_score_t,
        index: usize,
        out_event: *mut moenotes_event_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_event_value_at(
        score: *const moenotes_score_t,
        event_index: usize,
        value_index: usize,
        out_value: *mut i32,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_call_rhythm_count(
        score: *const moenotes_score_t,
        event_index: usize,
    ) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_call_rhythm_at(
        score: *const moenotes_score_t,
        event_index: usize,
        rhythm_index: usize,
        out_progress: *mut f64,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_bar_line_count(score: *const moenotes_score_t) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_bar_line_at(
        score: *const moenotes_score_t,
        index: usize,
        out_position: *mut moenotes_position_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_last_timing_note_count(score: *const moenotes_score_t) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_last_timing_note_at(
        score: *const moenotes_score_t,
        index: usize,
        out_note: *mut moenotes_note_view_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_note_fever_event(
        score: *const moenotes_score_t,
        note_id: i32,
        out_event_index: *mut i32,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_line_count(score: *const moenotes_score_t) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_line_at(
        score: *const moenotes_score_t,
        index: usize,
        out_line: *mut moenotes_line_view_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_note_line_count(score: *const moenotes_score_t, note_id: i32) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_note_line_at(
        score: *const moenotes_score_t,
        note_id: i32,
        index: usize,
        out_line_id: *mut i32,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_sample_line(
        score: *const moenotes_score_t,
        line_id: i32,
        tick: i32,
        out_sample: *mut moenotes_line_sample_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_sample_judgement_line(
        score: *const moenotes_score_t,
        line_id: i32,
        tick: i32,
        out_sample: *mut moenotes_line_sample_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_line_member_count(score: *const moenotes_score_t, line_id: i32) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_line_member_at(
        score: *const moenotes_score_t,
        line_id: i32,
        index: usize,
        out_note: *mut moenotes_note_view_t,
    ) -> moenotes_result_t;
}
unsafe extern "C" {
    pub fn moenotes_score_full_combo_count(
        score: *const moenotes_score_t,
        include_slide_combos: u8,
        include_hidden_flick_nodes: u8,
    ) -> u32;
}
unsafe extern "C" {
    pub fn moenotes_score_command_count(score: *const moenotes_score_t) -> usize;
}
unsafe extern "C" {
    pub fn moenotes_score_command_at(
        score: *const moenotes_score_t,
        index: usize,
        score_type: i32,
        current_life: i32,
        current_combo: i32,
        out_command: *mut moenotes_command_t,
    ) -> moenotes_result_t;
}
